Fixing Featured Supercars buttons spacing

--- a/ecommerce/homepage.css
+++ b/ecommerce/homepage.css
@@ -104,6 +104,7 @@ body {
 
 button.button {
   margin: 0;
+  margin-left: 10px;
 }
 
 .button:hover {
